--- a/code.ipynb
+++ b/code.ipynb
@@ -306,20 +306,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "cec9b9b9",
+   "execution_count": 20,
+   "id": "656a7b8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "    cap.release()\n",
-    "    cv2.destroyAllWindows()"
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.utils import to_categorical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4e3f90f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_map = {label:num for num, label in enumerate(actions)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1473c20e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'hello': 0, 'thanks': 1, 'i love you': 2}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0b4eccb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequences, labels = [], []\n",
+    "for action in actions:\n",
+    "    for sequence in range(no_sequences):\n",
+    "        window = []\n",
+    "        for frame_num in range(sequence_length):\n",
+    "            res = np.load(os.path.join(DATA_PATH, action, str(sequence), \"{}.npy\".format(frame_num)))\n",
+    "            window.append(res)\n",
+    "        sequences.append(window)\n",
+    "        labels.append(label_map[action])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fe836402",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.array(sequences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a8ea3e7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(90, 30, 1662)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "64ac1740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = to_categorical(labels).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ae92dad0",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 0, 1]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d0415987",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.05)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92d64761",
+   "id": "c64ffe32",
    "metadata": {},
    "outputs": [],
    "source": []
