--- a/code.ipynb
+++ b/code.ipynb
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mp_holistic = mp.solutions.holistic\n",
-    "mp_drawing = mp.solutions.drawing_utils"
+    "mp_holistic = mp.solutions.holistic # Holistic model\n",
+    "mp_drawing = mp.solutions.drawing_utils # Drawing utilities"
    ]
   },
   {
@@ -34,11 +34,11 @@
    "outputs": [],
    "source": [
     "def mediapipe_detection(image, model):\n",
-    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "    image.flags.writeable = False\n",
-    "    results = model.process(image)\n",
-    "    image.flags.writeable = True\n",
-    "    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB) # COLOR CONVERSION BGR 2 RGB\n",
+    "    image.flags.writeable = False                  # Image is no longer writeable\n",
+    "    results = model.process(image)                 # Make prediction\n",
+    "    image.flags.writeable = True                   # Image is now writeable\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR) # COLOR COVERSION RGB 2 BGR\n",
     "    return image, results"
    ]
   },
@@ -50,10 +50,10 @@
    "outputs": [],
    "source": [
     "def draw_landmarks(image, results):\n",
-    "    mp_drawing.draw_landmarks(image, results.face_landmarks, mp_holistic.FACEMESH_CONTOURS)\n",
-    "    mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_holistic.POSE_CONNECTIONS)\n",
-    "    mp_drawing.draw_landmarks(image, results.left_hand_landmarks, mp_holistic.HAND_CONNECTIONS)\n",
-    "    mp_drawing.draw_landmarks(image, results.right_hand_landmarks, mp_holistic.HAND_CONNECTIONS)"
+    "    mp_drawing.draw_landmarks(image, results.face_landmarks, mp_holistic.FACEMESH_CONTOURS)     # Draw face connections\n",
+    "    mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_holistic.POSE_CONNECTIONS)      # Draw pose connections\n",
+    "    mp_drawing.draw_landmarks(image, results.left_hand_landmarks, mp_holistic.HAND_CONNECTIONS) # Draw left hand connections\n",
+    "    mp_drawing.draw_landmarks(image, results.right_hand_landmarks, mp_holistic.HAND_CONNECTIONS)# Draw right hand connections"
    ]
   },
   {
@@ -64,18 +64,25 @@
    "outputs": [],
    "source": [
     "def draw_styled_landmarks(image, results):\n",
+    "    # Draw face connections\n",
     "    mp_drawing.draw_landmarks(image, results.face_landmarks, mp_holistic.FACEMESH_CONTOURS,\n",
     "                              mp_drawing.DrawingSpec(color=(80,110,10), thickness=1, circle_radius=1),\n",
     "                              mp_drawing.DrawingSpec(color=(80,256,121), thickness=1, circle_radius=1)\n",
     "                             )\n",
+    "    \n",
+    "    # Draw pose connections\n",
     "    mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_holistic.POSE_CONNECTIONS,\n",
     "                              mp_drawing.DrawingSpec(color=(80,22,10), thickness=2, circle_radius=4),\n",
     "                              mp_drawing.DrawingSpec(color=(80,44,121), thickness=2, circle_radius=2)\n",
     "                             )\n",
+    "    \n",
+    "    # Draw left hand connections\n",
     "    mp_drawing.draw_landmarks(image, results.left_hand_landmarks, mp_holistic.HAND_CONNECTIONS,\n",
     "                              mp_drawing.DrawingSpec(color=(121,22,76), thickness=2, circle_radius=4),\n",
     "                              mp_drawing.DrawingSpec(color=(121,44,250), thickness=2, circle_radius=2)\n",
     "                             )\n",
+    "    \n",
+    "    # Draw right hand connections\n",
     "    mp_drawing.draw_landmarks(image, results.right_hand_landmarks, mp_holistic.HAND_CONNECTIONS,\n",
     "                              mp_drawing.DrawingSpec(color=(245,117,66), thickness=2, circle_radius=4),\n",
     "                              mp_drawing.DrawingSpec(color=(245,66,230), thickness=2, circle_radius=2)\n",
@@ -90,12 +97,16 @@
    "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "# Set mediapipe model\n",
     "with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:\n",
     "    while cap.isOpened():\n",
     "        ret, frame = cap.read()\n",
-    "\n",
+    "        \n",
+    "        # Make detections\n",
     "        image, results = mediapipe_detection(frame, holistic)\n",
     "        \n",
+    "        # Draw landmarks\n",
     "        draw_styled_landmarks(image, results)\n",
     "\n",
     "        cv2.imshow(\"Camera Feed\", image)\n",
@@ -193,10 +204,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pose = np.array([[res.x, res.y, res.z, res.visibility] for res in results.pose_landmarks.landmark]).flatten() if results.pose_landmarks else np.zeros(132)\n",
-    "face = np.array([[res.x, res.y, res.z] for res in results.face_landmarks.landmark]).flatten() if results.face_landmarks else np.zeros(1404)\n",
-    "lh = np.array([[res.x, res.y, res.z] for res in results.left_hand_landmarks.landmark]).flatten() if results.left_hand_landmarks else np.zeros(21*3)\n",
-    "rh = np.array([[res.x, res.y, res.z] for res in results.right_hand_landmarks.landmark]).flatten() if results.right_hand_landmarks else np.zeros(21*3)"
+    "pose = np.array([[res.x, res.y, res.z, res.visibility] for res in results.pose_landmarks.landmark]).flatten() if results.pose_landmarks else np.zeros(132) # pose values concatanated and flattened\n",
+    "face = np.array([[res.x, res.y, res.z] for res in results.face_landmarks.landmark]).flatten() if results.face_landmarks else np.zeros(1404)                # face values concatanated and flattened\n",
+    "lh = np.array([[res.x, res.y, res.z] for res in results.left_hand_landmarks.landmark]).flatten() if results.left_hand_landmarks else np.zeros(21*3)        # left hand values concatanated and flattened\n",
+    "rh = np.array([[res.x, res.y, res.z] for res in results.right_hand_landmarks.landmark]).flatten() if results.right_hand_landmarks else np.zeros(21*3)      # right hand values concatanated and flattened"
    ]
   },
   {
@@ -206,6 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# keypoints extraction from frame \n",
     "def extract_keypoints(results):\n",
     "    pose = np.array([[res.x, res.y, res.z, res.visibility] for res in results.pose_landmarks.landmark]).flatten() if results.pose_landmarks else np.zeros(33*4)\n",
     "    face = np.array([[res.x, res.y, res.z] for res in results.face_landmarks.landmark]).flatten() if results.face_landmarks else np.zeros(468*3)\n",
@@ -243,9 +255,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Path for exported data, numpy arrays\n",
     "DATA_PATH = os.path.join('MP_Data')\n",
+    "\n",
+    "# Actions that we try to detect\n",
     "actions = np.array([\"hello\", \"thanks\", \"i love you\"])\n",
+    "\n",
+    "# Thirty videos worth of data\n",
     "no_sequences = 30\n",
+    "\n",
+    "# Videos are going to be 30 frames in length\n",
     "sequence_length = 30"
    ]
   },
@@ -272,18 +291,27 @@
    "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "# Set mediapipe model \n",
     "with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:\n",
+    "    \n",
+    "    # NEW LOOP\n",
+    "    # Loop through actions\n",
     "    for action in actions:\n",
+    "        # Loop through sequences aka videos\n",
     "        for sequence in range(no_sequences):\n",
     "            for frame_num in range(sequence_length):\n",
     "                \n",
     "        \n",
     "                ret, frame = cap.read()\n",
-    "\n",
+    "                \n",
+    "                # Make detections\n",
     "                image, results = mediapipe_detection(frame, holistic)\n",
-    "\n",
+    "                \n",
+    "                # Draw landmarks\n",
     "                draw_styled_landmarks(image, results)\n",
     "                \n",
+    "                # Apply wait logic\n",
     "                if frame_num == 0:\n",
     "                    cv2.putText(image, \"Starting Collection\", (120,200), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 4, cv2.LINE_AA)\n",
     "                    cv2.putText(image, \"Collecting Frame for {} video number {}\".format(action, sequence), (15,12), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
@@ -291,8 +319,9 @@
     "                else:\n",
     "                    cv2.putText(image, \"Collecting Frame for {} video number {}\".format(action, sequence), (15,12), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
     "\n",
-    "                cv2.imshow(\"Camera Feed\", image)\n",
-    "                \n",
+    "                    cv2.imshow(\"Camera Feed\", image)\n",
+    "                    \n",
+    "                # Export keypoints\n",
     "                keypoints = extract_keypoints(results)\n",
     "                npy_path = os.path.join(DATA_PATH, action, str(sequence), str(frame_num))\n",
     "                np.save(npy_path, keypoints)\n",
@@ -322,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_map = {label:num for num, label in enumerate(actions)}"
+    "label_map = {label:num for num, label in enumerate(actions)} # label creation"
    ]
   },
   {
@@ -353,6 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# data and label mapping\n",
     "sequences, labels = [], []\n",
     "for action in actions:\n",
     "    for sequence in range(no_sequences):\n",
@@ -402,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = to_categorical(labels).astype(int)"
+    "y = to_categorical(labels).astype(int) "
    ]
   },
   {
@@ -524,6 +554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# train and test data split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.05)"
    ]
   },
@@ -569,6 +600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# build LSTM neural network model\n",
     "model = Sequential()\n",
     "model.add(LSTM(64, return_sequences=True, activation='relu', input_shape=(30,1662)))\n",
     "model.add(LSTM(128, return_sequences=True, activation='relu'))\n",
@@ -1513,6 +1545,7 @@
     }
    ],
    "source": [
+    "# model fitting and training \n",
     "model.fit(X_train, y_train, epochs=2000, callbacks=[tb_callback])"
    ]
   },
@@ -1523,6 +1556,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load the trained model\n",
     "model = load_model('action_2.h5')"
    ]
   },
@@ -1617,6 +1651,7 @@
     }
    ],
    "source": [
+    "# test data prediction \n",
     "yhat = model.predict(X_test)"
    ]
   },
@@ -1678,6 +1713,7 @@
     }
    ],
    "source": [
+    "# confusion matrix \n",
     "multilabel_confusion_matrix(ytrue, yhat)"
    ]
   },
@@ -1709,6 +1745,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# visualiztion\n",
     "colors = [(245,117,16), (117,245,16), (16,117,245)]\n",
     "def prob_viz(res, actions, input_frame, colors):\n",
     "    output_frame = input_frame.copy()\n",
@@ -2273,14 +2310,18 @@
     "threshold = 0.6\n",
     "\n",
     "cap = cv2.VideoCapture(0)\n",
+    "# Set mediapipe model\n",
     "with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:\n",
     "    while cap.isOpened():\n",
     "        ret, frame = cap.read()\n",
     "\n",
+    "        # Make detections\n",
     "        image, results = mediapipe_detection(frame, holistic)\n",
     "        \n",
+    "        # Draw landmarks\n",
     "        draw_styled_landmarks(image, results)\n",
     "        \n",
+    "         # Prediction logic\n",
     "        keypoints = extract_keypoints(results)\n",
     "        sequence.append(keypoints)\n",
     "        sequence = sequence[-30:]\n",
@@ -2290,6 +2331,7 @@
     "            print(actions[np.argmax(res)]) \n",
     "            predictions.append(np.argmax(res))\n",
     "            \n",
+    "            # Vizualization logic\n",
     "            if np.unique(predictions[-10:])[0]==np.argmax(res): \n",
     "                if res[np.argmax(res)] > threshold: \n",
     "\n",
@@ -2301,7 +2343,8 @@
     "\n",
     "            if len(sentence) > 5: \n",
     "                sentence = sentence[-5:]\n",
-    "\n",
+    "            \n",
+    "            # Viz probabilities\n",
     "            image = prob_viz(res, actions, image, colors)\n",
     "            \n",
     "        cv2.rectangle(image, (0,0), (640, 40), (245, 117, 16), -1)\n",
